# elementwise-serialize

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
elementwise_serialize/: Cargo.toml
elementwise_serialize/src/: lib.rs
elementwise_serialize_derive/: Cargo.toml
elementwise_serialize_derive/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
use_elementwise_serialize/: Cargo.toml
use_elementwise_serialize/src/: main.rs
