[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elementwise_serialize = { path = "../elementwise_serialize" }
elementwise_serialize_derive = { path = "../elementwise_serialize_derive" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4.0"

[dev-dependencies]
tempfile = "3.9.0"
